@@ -8,17 +8,17 @@ package com.powsybl.cgmes.conversion.export;
 
 import com.powsybl.cgmes.conversion.Conversion;
 import com.powsybl.cgmes.conversion.export.CgmesExportContext.ModelDescription;
+import com.powsybl.cgmes.conversion.naming.CgmesObjectReference;
+import com.powsybl.cgmes.conversion.naming.CgmesObjectReference.Part;
 import com.powsybl.cgmes.extensions.CgmesTapChanger;
 import com.powsybl.cgmes.extensions.CgmesTapChangers;
+import com.powsybl.cgmes.extensions.CgmesTapChangersAdder;
+import com.powsybl.cgmes.extensions.CgmesTopologyKind;
 import com.powsybl.cgmes.model.CgmesNames;
+import com.powsybl.cgmes.model.CgmesSubset;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.iidm.network.*;
 import com.powsybl.iidm.network.extensions.LoadDetail;
-import com.powsybl.iidm.network.util.LinkData;
-import org.apache.commons.math3.complex.Complex;
-import org.apache.commons.math3.complex.ComplexUtils;
-import org.joda.time.DateTime;
-import org.joda.time.format.ISODateTimeFormat;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -26,15 +26,21 @@ import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamWriter;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
+import static com.powsybl.cgmes.conversion.naming.CgmesObjectReference.ref;
+import static com.powsybl.cgmes.conversion.naming.CgmesObjectReference.refTyped;
+import static com.powsybl.cgmes.model.CgmesNames.PHASE_TAP_CHANGER;
+import static com.powsybl.cgmes.model.CgmesNames.RATIO_TAP_CHANGER;
 import static com.powsybl.cgmes.model.CgmesNamespace.MD_NAMESPACE;
 import static com.powsybl.cgmes.model.CgmesNamespace.RDF_NAMESPACE;
 
 /**
- * @author Miora Ralambotiana <miora.ralambotiana at rte-france.com>
+ * @author Miora Ralambotiana {@literal <miora.ralambotiana at rte-france.com>}
  */
 public final class CgmesExportUtil {
 
@@ -45,9 +51,10 @@ public final class CgmesExportUtil {
 
     private static final DecimalFormatSymbols DOUBLE_FORMAT_SYMBOLS = new DecimalFormatSymbols(Locale.US);
     private static final DecimalFormat DOUBLE_FORMAT = new DecimalFormat("0.##############", DOUBLE_FORMAT_SYMBOLS);
-    private static final DecimalFormat SCIENTIFIC_FORMAT = new DecimalFormat("0.####E0", DOUBLE_FORMAT_SYMBOLS);
+    private static final DecimalFormat SCIENTIFIC_FORMAT = new DecimalFormat("0.######E0", DOUBLE_FORMAT_SYMBOLS);
+    private static final DateTimeFormatter DATE_TIME_FORMATTER = DateTimeFormatter.ofPattern("yyy-MM-dd'T'HH:mm:ssXXX").withZone(ZoneOffset.UTC);
 
-    private static final Pattern CIM_MRID_PATTERN = Pattern.compile("(?i)[a-f\\d]{8}-[a-f\\d]{4}-[a-f\\d]{4}-[a-f\\d]{4}-[a-f\\d]{12}");
+    private static final Pattern CIM_MRID_PATTERN = Pattern.compile("(?i)_?[a-f\\d]{8}-[a-f\\d]{4}-[a-f\\d]{4}-[a-f\\d]{4}-[a-f\\d]{12}");
     private static final Pattern URN_UUID_PATTERN = Pattern.compile("(?i)urn:uuid:[a-f\\d]{8}-[a-f\\d]{4}-[a-f\\d]{4}-[a-f\\d]{4}-[a-f\\d]{12}");
     private static final Pattern ENTSOE_BD_EXCEPTIONS_PATTERN1 = Pattern.compile("(?i)[a-f\\d]{8}-[a-f\\d]{4}-[a-f\\d]{4}-[a-f\\d]{4}-[a-f\\d]{7}");
     private static final Pattern ENTSOE_BD_EXCEPTIONS_PATTERN2 = Pattern.compile("(?i)[a-f\\d]{8}[a-f\\d]{4}[a-f\\d]{4}[a-f\\d]{4}[a-f\\d]{12}");
@@ -91,7 +98,7 @@ public final class CgmesExportUtil {
                 || ENTSOE_BD_EXCEPTIONS_PATTERN2.matcher(id).matches();
     }
 
-    public static String getUniqueId() {
+    public static String getUniqueRandomId() {
         return UUID.randomUUID().toString();
     }
 
@@ -107,17 +114,29 @@ public final class CgmesExportUtil {
         writer.writeNamespace("md", MD_NAMESPACE);
     }
 
-    public static void writeModelDescription(XMLStreamWriter writer, ModelDescription modelDescription, CgmesExportContext context) throws XMLStreamException {
-        writer.writeStartElement(MD_NAMESPACE, "FullModel");
-        String modelId = "urn:uuid:" + CgmesExportUtil.getUniqueId();
+    public static void writeModelDescription(Network network, CgmesSubset subset, XMLStreamWriter writer, ModelDescription modelDescription, CgmesExportContext context) throws XMLStreamException {
+        // The ref to build a unique model id must contain:
+        // the network, the subset (EQ, SSH, SV, ...), the time of the scenario, the version, the business process and the FULL_MODEL part
+        // If we use name-based UUIDs this ensures that the UUID for the model will be specific enough
+        CgmesObjectReference[] modelRef = {
+            refTyped(network),
+            ref(subset),
+            ref(DATE_TIME_FORMATTER.format(context.getScenarioTime())),
+            ref(format(modelDescription.getVersion())),
+            ref(context.getBusinessProcess()),
+            Part.FULL_MODEL};
+        String modelId = "urn:uuid:" + context.getNamingStrategy().getCgmesId(modelRef);
         modelDescription.setIds(modelId);
         context.updateDependencies();
+
+        writer.writeStartElement(MD_NAMESPACE, "FullModel");
         writer.writeAttribute(RDF_NAMESPACE, CgmesNames.ABOUT, modelId);
+        context.getReporter().report("CgmesId", modelId);
         writer.writeStartElement(MD_NAMESPACE, CgmesNames.SCENARIO_TIME);
-        writer.writeCharacters(ISODateTimeFormat.dateTimeNoMillis().withZoneUTC().print(context.getScenarioTime()));
+        writer.writeCharacters(DATE_TIME_FORMATTER.format(context.getScenarioTime()));
         writer.writeEndElement();
         writer.writeStartElement(MD_NAMESPACE, CgmesNames.CREATED);
-        writer.writeCharacters(ISODateTimeFormat.dateTimeNoMillis().withZoneUTC().print(DateTime.now()));
+        writer.writeCharacters(DATE_TIME_FORMATTER.format(ZonedDateTime.now()));
         writer.writeEndElement();
         if (modelDescription.getDescription() != null) {
             writer.writeStartElement(MD_NAMESPACE, CgmesNames.DESCRIPTION);
@@ -138,6 +157,12 @@ public final class CgmesExportUtil {
         writer.writeStartElement(MD_NAMESPACE, CgmesNames.PROFILE);
         writer.writeCharacters(modelDescription.getProfile());
         writer.writeEndElement();
+        if (subset == CgmesSubset.EQUIPMENT && context.getTopologyKind().equals(CgmesTopologyKind.NODE_BREAKER) && context.getCimVersion() < 100) {
+            // From CGMES 3 EquipmentOperation is not required to write operational limits, connectivity nodes
+            writer.writeStartElement(MD_NAMESPACE, CgmesNames.PROFILE);
+            writer.writeCharacters(context.getCim().getProfileUri("EQ_OP"));
+            writer.writeEndElement();
+        }
         writer.writeStartElement(MD_NAMESPACE, CgmesNames.MODELING_AUTHORITY_SET);
         writer.writeCharacters(modelDescription.getModelingAuthoritySet());
         writer.writeEndElement();
@@ -162,7 +187,7 @@ public final class CgmesExportUtil {
         // Only classes extending IdentifiedObject have an mRID
         // points of tables and curve data objects do not have mRID, although they have an RDF:ID
         writer.writeAttribute(RDF_NAMESPACE, CgmesNames.ID, toRdfId(id, context));
-        if (writeMasterResourceId) {
+        if (writeMasterResourceId && context.getCim().getVersion() >= 100) {
             writer.writeStartElement(cimNamespace, "IdentifiedObject.mRID");
             writer.writeCharacters(toMasterResourceId(id, context));
             writer.writeEndElement();
@@ -186,23 +211,34 @@ public final class CgmesExportUtil {
         writer.writeAttribute(RDF_NAMESPACE, CgmesNames.ABOUT, "#" + toRdfId(id, context));
     }
 
-    public static Complex complexVoltage(double r, double x, double g, double b,
-                                         double v, double angle, double p, double q) {
-        LinkData.BranchAdmittanceMatrix adm = LinkData.calculateBranchAdmittance(r, x, 1.0, 0.0, 1.0, 0.0,
-                new Complex(g * 0.5, b * 0.5), new Complex(g * 0.5, b * 0.5));
-        Complex v1 = ComplexUtils.polar2Complex(v, Math.toRadians(angle));
-        Complex s1 = new Complex(p, q);
-        return (s1.conjugate().divide(v1.conjugate()).subtract(adm.y11().multiply(v1))).divide(adm.y12());
+    public static String loadClassName(Load load) {
+        String originalClassName = load.getProperty(Conversion.PROPERTY_CGMES_ORIGINAL_CLASS, "undefined");
+        double p0 = load.getP0();
+        LoadDetail loadDetail = load.getExtension(LoadDetail.class);
+        if (originalClassName.equals(CgmesNames.ASYNCHRONOUS_MACHINE)
+                || originalClassName.equals(CgmesNames.SV_INJECTION)
+                || originalClassName.equals(CgmesNames.ENERGY_SOURCE) && p0 <= 0.0
+                || originalClassName.equals(CgmesNames.ENERGY_CONSUMER) && p0 >= 0.0 && !isConformLoad(loadDetail) && !isNonConformLoad(loadDetail)
+                || originalClassName.equals(CgmesNames.CONFORM_LOAD) && p0 >= 0.0 && !isNonConformLoad(loadDetail)
+                || originalClassName.equals(CgmesNames.NONCONFORM_LOAD) && p0 >= 0.0 && !isConformLoad(loadDetail)
+                || originalClassName.equals(CgmesNames.STATION_SUPPLY) && p0 >= 0.0 && !isConformLoad(loadDetail) && !isNonConformLoad(loadDetail)) {
+            return originalClassName;
+        }
+        return calculatedLoadClassName(p0, loadDetail);
     }
 
-    public static String loadClassName(LoadDetail loadDetail) {
+    private static String calculatedLoadClassName(double p0, LoadDetail loadDetail) {
+        // As negative loads are not allowed, they are modeled as energy source.
+        // Note that negative loads can be the result of network reduction and could be modeled
+        // as equivalent injections.
+        return p0 < 0 ? CgmesNames.ENERGY_SOURCE : loadDetailClassName(loadDetail);
+    }
+
+    public static String loadDetailClassName(LoadDetail loadDetail) {
         if (loadDetail != null) {
-            // Conform load if fixed part is zero and variable part is non-zero
-            if (loadDetail.getFixedActivePower() == 0 && loadDetail.getFixedReactivePower() == 0
-                    && (loadDetail.getVariableActivePower() != 0 || loadDetail.getVariableReactivePower() != 0)) {
+            if (isConformLoad(loadDetail)) {
                 return CgmesNames.CONFORM_LOAD;
-            } else if (loadDetail.getVariableActivePower() == 0 && loadDetail.getVariableReactivePower() == 0
-                    && (loadDetail.getFixedActivePower() != 0 || loadDetail.getFixedReactivePower() != 0)) {  // NonConform load if fixed part is non-zero and variable part is all zero
+            } else if (isNonConformLoad(loadDetail)) {
                 return CgmesNames.NONCONFORM_LOAD;
             } else {
                 return CgmesNames.NONCONFORM_LOAD;
@@ -212,17 +248,32 @@ public final class CgmesExportUtil {
         return CgmesNames.ENERGY_CONSUMER;
     }
 
+    private static boolean isConformLoad(LoadDetail loadDetail) {
+        // Conform load if fixed part is zero and variable part is non-zero
+        return loadDetail != null
+                && loadDetail.getFixedActivePower() == 0
+                && loadDetail.getFixedReactivePower() == 0
+                && (loadDetail.getVariableActivePower() != 0 || loadDetail.getVariableReactivePower() != 0);
+    }
+
+    private static boolean isNonConformLoad(LoadDetail loadDetail) {
+        // NonConform load if fixed part is non-zero and variable part is all zero
+        return loadDetail != null
+                && loadDetail.getVariableActivePower() == 0
+                && loadDetail.getVariableReactivePower() == 0
+                && (loadDetail.getFixedActivePower() != 0 || loadDetail.getFixedReactivePower() != 0);
+    }
+
     public static String switchClassname(SwitchKind kind) {
-        switch (kind) {
-            case BREAKER:
-                return "Breaker";
-            case DISCONNECTOR:
-                return "Disconnector";
-            case LOAD_BREAK_SWITCH:
-                return "LoadBreakSwitch";
-        }
-        LOG.warn("It is not possible to determine the type of switch from kind {}", kind);
-        return "Switch";
+        return switch (kind) {
+            case BREAKER -> "Breaker";
+            case DISCONNECTOR -> "Disconnector";
+            case LOAD_BREAK_SWITCH -> "LoadBreakSwitch";
+            default -> {
+                LOG.warn("It is not possible to determine the type of switch from kind {}", kind);
+                yield "Switch";
+            }
+        };
     }
 
     public static int getTerminalSequenceNumber(Terminal t, List<DanglingLine> boundaryDanglingLines) {
@@ -238,26 +289,10 @@ public final class CgmesExportUtil {
             }
             return 1;
         } else {
-            if (c instanceof Branch) {
-                switch (((Branch<?>) c).getSide(t)) {
-                    case ONE:
-                        return 1;
-                    case TWO:
-                        return 2;
-                    default:
-                        throw new IllegalStateException("Incorrect branch side " + ((Branch<?>) c).getSide(t));
-                }
+            if (c instanceof Branch<?> branch) {
+                return branch.getSide(t).getNum();
             } else if (c instanceof ThreeWindingsTransformer twt) {
-                switch (twt.getSide(t)) {
-                    case ONE:
-                        return 1;
-                    case TWO:
-                        return 2;
-                    case THREE:
-                        return 3;
-                    default:
-                        throw new IllegalStateException("Incorrect three-windings transformer side " + twt.getSide(t));
-                }
+                return twt.getSide(t).getNum();
             } else {
                 throw new PowsyblException("Unexpected Connectable instance: " + c.getClass());
             }
@@ -266,15 +301,10 @@ public final class CgmesExportUtil {
 
     public static boolean isConverterStationRectifier(HvdcConverterStation<?> converterStation) {
         if (converterStation.getHvdcLine().getConvertersMode().equals(HvdcLine.ConvertersMode.SIDE_1_RECTIFIER_SIDE_2_INVERTER)) {
-            if (converterStation.getHvdcLine().getConverterStation1().equals(converterStation)) {
-                return true;
-            }
+            return converterStation.getHvdcLine().getConverterStation1().equals(converterStation);
         } else {
-            if (converterStation.getHvdcLine().getConverterStation2().equals(converterStation)) {
-                return true;
-            }
+            return converterStation.getHvdcLine().getConverterStation2().equals(converterStation);
         }
-        return false;
     }
 
     public static String converterClassName(HvdcConverterStation<?> converterStation) {
@@ -308,6 +338,95 @@ public final class CgmesExportUtil {
         }
     }
 
+    // tap changer is exported as it is modelled in IIDM, always at end 1
+    static void addUpdateCgmesTapChangerExtension(TwoWindingsTransformer twt, CgmesExportContext context) {
+        twt.getOptionalRatioTapChanger().ifPresent(rtc -> addTapChangerExtension(twt, RATIO_TAP_CHANGER, getTapChangerId(twt, RATIO_TAP_CHANGER, context), regulatingControlIsDefined(rtc), context));
+        twt.getOptionalPhaseTapChanger().ifPresent(ptc -> addTapChangerExtension(twt, PHASE_TAP_CHANGER, getTapChangerId(twt, PHASE_TAP_CHANGER, context), regulatingControlIsDefined(ptc), context));
+    }
+
+    static void addUpdateCgmesTapChangerExtension(ThreeWindingsTransformer twt, CgmesExportContext context) {
+        twt.getLeg1().getOptionalRatioTapChanger().ifPresent(rtc -> addTapChangerExtension(twt, RATIO_TAP_CHANGER, getTapChangerId(twt, RATIO_TAP_CHANGER, 1, context), regulatingControlIsDefined(rtc), context));
+        twt.getLeg1().getOptionalPhaseTapChanger().ifPresent(ptc -> addTapChangerExtension(twt, PHASE_TAP_CHANGER, getTapChangerId(twt, PHASE_TAP_CHANGER, 1, context), regulatingControlIsDefined(ptc), context));
+
+        twt.getLeg2().getOptionalRatioTapChanger().ifPresent(rtc -> addTapChangerExtension(twt, RATIO_TAP_CHANGER, getTapChangerId(twt, RATIO_TAP_CHANGER, 2, context), regulatingControlIsDefined(rtc), context));
+        twt.getLeg2().getOptionalPhaseTapChanger().ifPresent(ptc -> addTapChangerExtension(twt, PHASE_TAP_CHANGER, getTapChangerId(twt, PHASE_TAP_CHANGER, 2, context), regulatingControlIsDefined(ptc), context));
+
+        twt.getLeg3().getOptionalRatioTapChanger().ifPresent(rtc -> addTapChangerExtension(twt, RATIO_TAP_CHANGER, getTapChangerId(twt, RATIO_TAP_CHANGER, 3, context), regulatingControlIsDefined(rtc), context));
+        twt.getLeg3().getOptionalPhaseTapChanger().ifPresent(ptc -> addTapChangerExtension(twt, PHASE_TAP_CHANGER, getTapChangerId(twt, PHASE_TAP_CHANGER, 3, context), regulatingControlIsDefined(ptc), context));
+    }
+
+    // If we had alias only for tc1, it will be at end 1
+    // If we had alias for tc1 and tc2, tc2 has been moved to end 1 and combined with tc1, tc1 id will be used
+    // If we only had tc at end 2, it has been moved to end 1 but the id is recorded at end2, tc2 id will be used
+    private static <C extends Connectable<C>> String getTapChangerId(C twt, String cgmesTapChangerTag, CgmesExportContext context) {
+        String aliasType1 = Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + cgmesTapChangerTag + 1;
+        Optional<String> optionalTapChangerId1 = twt.getAliasFromType(aliasType1);
+        if (optionalTapChangerId1.isPresent()) {
+            return optionalTapChangerId1.get();
+        } else {
+            String aliasType2 = Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + cgmesTapChangerTag + 2;
+            Optional<String> optionalTapChangerId2 = twt.getAliasFromType(aliasType2);
+            if (optionalTapChangerId2.isEmpty()) {
+                // We create a new id always at end 1
+                Part ratioPhasePart = Objects.equals(cgmesTapChangerTag, RATIO_TAP_CHANGER) ? Part.RATIO_TAP_CHANGER : Part.PHASE_TAP_CHANGER;
+                String newTapChangerId = context.getNamingStrategy().getCgmesId(refTyped(twt), ratioPhasePart);
+                twt.addAlias(newTapChangerId, aliasType1);
+                return newTapChangerId;
+            } else {
+                return optionalTapChangerId2.get();
+            }
+        }
+    }
+
+    private static <C extends Connectable<C>> String getTapChangerId(C twt, String cgmesTapChangerTag, int endNumber, CgmesExportContext context) {
+        String aliasType = Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + cgmesTapChangerTag + endNumber;
+        Optional<String> optionalTapChangerId = twt.getAliasFromType(aliasType);
+        if (optionalTapChangerId.isEmpty()) {
+            Part ratioPhasePart = Objects.equals(cgmesTapChangerTag, RATIO_TAP_CHANGER) ? Part.RATIO_TAP_CHANGER : Part.PHASE_TAP_CHANGER;
+            String newTapChangerId = context.getNamingStrategy().getCgmesId(refTyped(twt), ratioPhasePart);
+            twt.addAlias(newTapChangerId, aliasType);
+            return newTapChangerId;
+        } else {
+            return optionalTapChangerId.get();
+        }
+    }
+
+    static boolean regulatingControlIsDefined(RatioTapChanger rtc) {
+        return !Double.isNaN(rtc.getTargetV())
+                && !Double.isNaN(rtc.getTargetDeadband())
+                && rtc.getRegulationTerminal() != null;
+    }
+
+    static boolean regulatingControlIsDefined(PhaseTapChanger ptc) {
+        return ptc.getRegulationMode() != PhaseTapChanger.RegulationMode.FIXED_TAP
+                && !Double.isNaN(ptc.getRegulationValue())
+                && !Double.isNaN(ptc.getTargetDeadband())
+                && ptc.getRegulationTerminal() != null;
+    }
+
+    private static <C extends Connectable<C>> void addTapChangerExtension(C twt, String cgmesTapChangerTag, String tapChangerId, boolean regulatingControlIsDefined, CgmesExportContext context) {
+        if (!regulatingControlIsDefined) {
+            return;
+        }
+        CgmesTapChangers<C> cgmesTapChangers = twt.getExtension(CgmesTapChangers.class);
+        if (cgmesTapChangers == null) {
+            twt.newExtension(CgmesTapChangersAdder.class).add();
+            cgmesTapChangers = twt.getExtension(CgmesTapChangers.class);
+        }
+        CgmesTapChanger cgmesTapChanger = cgmesTapChangers.getTapChanger(tapChangerId);
+
+        Part refTapChanger = Objects.equals(cgmesTapChangerTag, RATIO_TAP_CHANGER) ? Part.RATIO_TAP_CHANGER : Part.PHASE_TAP_CHANGER;
+        if (cgmesTapChanger == null) {
+            cgmesTapChanger = cgmesTapChangers.newTapChanger()
+                    .setId(tapChangerId)
+                    .setControlId(context.getNamingStrategy().getCgmesId(ref(twt), refTapChanger, Part.REGULATING_CONTROL))
+                    .add();
+        }
+        if (cgmesTapChanger.getControlId() == null) {
+            cgmesTapChanger.setControlId(context.getNamingStrategy().getCgmesId(ref(twt), refTapChanger, Part.REGULATING_CONTROL));
+        }
+    }
+
     private static final Logger LOG = LoggerFactory.getLogger(CgmesExportUtil.class);
 
     public static String getTerminalId(Terminal t, CgmesExportContext context) {
@@ -328,7 +447,8 @@ public final class CgmesExportUtil {
         return network.getBoundaryElements().stream()
                 .filter(DanglingLine.class::isInstance)
                 .map(DanglingLine.class::cast)
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(Identifiable::getId))
+                .toList();
     }
 
     public static boolean isEquivalentShuntWithZeroSectionCount(Connectable<?> c) {
